# rust_diesel_project

./: .env  Cargo.toml  diesel.toml
migrations/2024-10-25-182022_create_users/: up.sql
src/: main.rs  models.rs  schema.rs
