[package]
name = "rust_diesel_project"
version = "0.1.0"
edition = "2021"

[dependencies]
# Diesel for database interactions
diesel = { version = "2.2.4", features = ["postgres", "r2d2"] }

# Dotenv for environment variables
dotenv = "0.15"

# UUID for generating UUIDs
uuid = { version = "1", features = ["v4"] }

# Actix-web for building the web API
actix-web = "4.0"

# Serde for JSON serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"